# django-rest-sohailADev

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  views.py
api/management/commands/: bootstrap_data .py
api/migrations/: 0001_initial.py  0002_auto_20200923_1302.py
shoestore_project/: asgi.py  settings.py  urls.py  wsgi.py
